// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats args with pretty format when given %p 1`] = `
PASS __tests__/pretty.test.js
  array
    ✓ "hello" == "hello"
    ✓ 1 == 1
    ✓ null == null
    ✓ undefined == undefined
    ✓ 1.2 == 1.2
    ✓ {"foo": "bar"} == {"foo": "bar"}
    ✓ {"foo": [Object]} == {"foo": [Object]}
    ✓ [Function noop] == [Function noop]
    ✓ [] == []
    ✓ [[Object]] == [[Object]]
    ✓ Infinity == Infinity
    ✓ -Infinity == -Infinity
    ✓ NaN == NaN
  template
    ✓ hello == hello
    ✓ 1 == 1
    ✓ null == null
    ✓ undefined == undefined
    ✓ 1.2 == 1.2
    ✓ {"foo": "bar"} == {"foo": "bar"}
    ✓ {"foo": [Object]} == {"foo": [Object]}
    ✓ [Function noop] == [Function noop]
    ✓ [] == []
    ✓ [[Object]] == [[Object]]
    ✓ Infinity == Infinity
    ✓ -Infinity == -Infinity
    ✓ NaN == NaN
`;

exports[`runs only the describe.only.each tests 1`] = `
PASS __tests__/describeOnly.test.js
  passes all rows expected true == true
    ✓ passes
    ✓ passes
  fails all rows expected false == true
    ○ skipped fails
`;

exports[`shows only the tests with .only as being ran 1`] = `
PASS __tests__/eachOnly.test.js
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ○ skipped Should not be ran: fails all rows expected true == false
  ○ skipped Should not be ran: fails all rows expected true == true
  ○ skipped Should not be ran: fails all rows expected true == false
  ○ skipped Should not be ran: fails all rows expected true == false
`;

exports[`shows only the tests without .skip as being ran 1`] = `
PASS __tests__/eachSkip.test.js
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ✓ passes one row expected true == true
  ○ skipped Should not be ran: fails all rows expected true == false
  ○ skipped Should not be ran: fails all rows expected true == true
  ○ skipped Should not be ran: fails all rows expected true == false
  ○ skipped Should not be ran: fails all rows expected true == false
  passes all rows expected true == true
    ○ skipped passes
    ○ skipped passes
`;
